--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,7 @@ body {
   font-size: 16px;
   text-align: center;
   margin-right: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #000000;
   border-radius: 4px;
 }
 
@@ -24,8 +24,7 @@ button {
   font-size: 16px;
   border: none;
   border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+
 }
 
 button:hover {
@@ -35,6 +34,9 @@ button:hover {
 #tableContent {
   width: 60%;
   max-width: 800px;
+}
+
+.cell {
   margin-top: 20px;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -42,17 +44,13 @@ button:hover {
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
-}
-
-.cell {
   display: block;
-  text-align: left;
   padding: 10px 0;
   border-bottom: 1px solid #ddd;
 }
 
 .title_display {
-  font-size: 24px;
+  font-size: 30px;
   font-weight: bold;
   margin-bottom: 10px;
 }
@@ -62,11 +60,16 @@ button:hover {
   color: #333;
   line-height: 1.6;
   margin-bottom: 10px;
+  overflow-wrap: break-word;
+  width: 500px;
+  margin: 0 auto;
 }
+
 
 .date_display {
   font-size: 14px;
   color: #777;
   text-align: right;
   margin-top: 10px;
+  margin-right: 10px;
 }
